--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "babel-plugin-transform-import-meta": "~1.0.1",
     "eslint": "~6.8.0",
     "eslint-plugin-import": "~2.18.2",
-    "eslint-plugin-jest": "~22.17.0",
+    "eslint-plugin-jest": "^24.3.5",
     "eslint-plugin-jsx-a11y": "~6.2.3",
     "eslint-plugin-node": "~11.1.0",
     "eslint-plugin-promise": "~4.2.1",
