--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@reactioncommerce/logger": "^1.1.3",
     "@reactioncommerce/random": "^1.0.2",
     "@reactioncommerce/reaction-error": "^1.0.1",
+    "@graphql-tools/merge": "^8.0.1",
     "apollo-server": "^2.25.2",
     "apollo-server-express": "^2.25.2",
     "apollo-server-testing": "^2.25.2",
