--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
   },
   "dependencies": {
     "@apollo/federation": "^0.27.1",
+    "@graphql-tools/merge": "^8.0.1",
     "@reactioncommerce/api-utils": "^1.16.5",
     "@reactioncommerce/logger": "^1.1.3",
     "@reactioncommerce/random": "^1.0.2",
     "@reactioncommerce/reaction-error": "^1.0.1",
-    "@graphql-tools/merge": "^8.0.1",
     "apollo-server": "^2.25.2",
     "apollo-server-express": "^2.25.2",
     "apollo-server-testing": "^2.25.2",
@@ -92,7 +92,7 @@
     "eslint-plugin-promise": "~4.2.1",
     "eslint-plugin-react": "~7.14.3",
     "eslint-plugin-react-hooks": "~2.0.1",
-    "graphql": "~14.7.0",
+    "graphql": "^15.0.0",
     "graphql-schema-linter": "~0.2.5",
     "husky": "~4.2.3",
     "jest": "~25.2.7"
