--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@reactioncommerce/logger": "^1.1.3",
     "@reactioncommerce/random": "^1.0.2",
     "@reactioncommerce/reaction-error": "^1.0.1",
-    "apollo-server": "^2.13.0",
+    "apollo-server": "^3.10.0",
     "apollo-server-express": "^2.13.0",
     "apollo-server-testing": "^2.13.0",
     "body-parser": "^1.19.0",
@@ -92,8 +92,9 @@
     "eslint-plugin-promise": "~4.2.1",
     "eslint-plugin-react": "~7.14.3",
     "eslint-plugin-react-hooks": "~2.0.1",
-    "graphql": "~14.6.0",
+    "graphql": "^15.8.0",
     "graphql-schema-linter": "~0.2.5",
+    "graphql-subscriptions": "^2.0.0",
     "husky": "~4.2.3",
     "jest": "~25.2.7"
   },
