--- a/package.json
+++ b/package.json
@@ -50,13 +50,14 @@
   "dependencies": {
     "@apollo/federation": "^0.15.0",
     "@graphql-tools/merge": "^8.0.1",
+    "@graphql-tools/schema": "^8.5.1",
     "@reactioncommerce/api-utils": "^1.12.0",
     "@reactioncommerce/logger": "^1.1.3",
     "@reactioncommerce/random": "^1.0.2",
     "@reactioncommerce/reaction-error": "^1.0.1",
     "apollo-server": "^3.10.0",
-    "apollo-server-express": "^2.13.0",
-    "apollo-server-testing": "^2.13.0",
+    "apollo-server-core": "^3.10.0",
+    "apollo-server-express": "^3.10.0",
     "body-parser": "^1.19.0",
     "callsite": "^1.0.0",
     "cors": "^2.8.5",
@@ -66,10 +67,15 @@
     "envalid": "^6.0.1",
     "express": "^4.17.1",
     "graphql-iso-date": "^3.6.1",
+    "graphql-redis-subscriptions": "^2.5.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.9.1",
+    "ioredis": "^5.2.1",
     "lodash": "^4.17.15",
     "mongodb": "3.6.2",
     "promise-retry": "^1.1.1",
-    "simpl-schema": "^1.7.0"
+    "simpl-schema": "^1.7.0",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -94,7 +100,6 @@
     "eslint-plugin-react-hooks": "~2.0.1",
     "graphql": "^15.8.0",
     "graphql-schema-linter": "~0.2.5",
-    "graphql-subscriptions": "^2.0.0",
     "husky": "~4.2.3",
     "jest": "~25.2.7"
   },
